--- a/public/css/style.css
+++ b/public/css/style.css
@@ -235,5 +235,8 @@ footer p{
     .tempInfo{
         width: auto;
     }
+    .main_layer .middle_layer p,.main_layer .middle_layer .fa{
+        font-size: 5rem;
+    }
 }
 
