--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <footer>
-      <p>Created with love by mahak</div></p>
+      <a href="https://in.linkedin.com/in/mahak-agrawal-693834201" target="blank"><p style="color:white">Created with love by mahak</p></a>
     </footer>
 </body>
 </html>
